[package]
name = "nnrs"
version = "0.1.0"
authors = ["Vadim Borodin <borodin.vadim@gmail.com>"]

[dependencies]
rand = "0.4.2"
rand_derive = "0.3.1"
byteorder = "1.2.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = {version = "~2.31", features = ["yaml"]}
num_cpus = "1.0"
matrixmultiply = "0.1.14"
